fixed grid alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     background-image: url("../images/galaxy_background.svg");
     background-size: cover;
+    overflow: hidden;
 }
 
 div {
